--- a/src/app/compoents/main-temp-mail/main-temp-mail.html
+++ b/src/app/compoents/main-temp-mail/main-temp-mail.html
@@ -190,7 +190,7 @@
       <!-- Sticky header inside the list card -->
       <div class="flex items-center justify-between gap-1 md:gap-3 px-4 pt-4 flex-wrap">
         <h2 class="hidden md:flex text-base font-semibold text-gray-900" i18n="@@mainTempMail.inbox">
-           {{title ? 'Your Inox': 'Your Temporary Inbox'}}
+           {{title ? 'Your Inbox': 'Your Temporary Inbox'}}
         </h2>
         <h2 class="md:hidden flex text-base font-semibold text-gray-900" i18n="@@mainTempMail.inbox2">
           Your Inbox
