--- a/src/app/pages/email-10min/email-10min.component.html
+++ b/src/app/pages/email-10min/email-10min.component.html
@@ -1,8 +1,9 @@
-<main class="container mx-auto px-4 py-8 md:py-10 max-w-5xl">
+  <main class="container mx-auto px-4  md:py-5 max-w-5xl">
+
 
     <!-- Page Header (card-like hero) -->
-<header class="text-center mb-6">
-  <div class=" bg-white md:p-7 ">
+<header class="text-center mb-6 md:mb-0">
+  <div class="bg-white p-5 pb-0 md:p-7 ">
     <h1 class="text-2xl md:text-3xl font-extrabold text-gray-900 mb-3" i18n="@@email10minTitle">
       10 Minute mail
     </h1>
@@ -15,7 +16,7 @@
 
     <!-- App Component Placeholder -->
     <section class="mb-6">
-      <div class="rounded-2xl bg-white shadow-xl ring-1 ring-gray-200 p-3 md:p-4">
+      <div class="rounded-2xl bg-white shadow-xl ring-1 ring-gray-200 ">
         <app-quick-email [pageTimeCount]="10"></app-quick-email>
       </div>
     </section>
