--- a/src/app/compoents/quick-email/quick-email.component.html
+++ b/src/app/compoents/quick-email/quick-email.component.html
@@ -20,14 +20,14 @@
                 }
               </span>
             </div>
-            <button
+            <!-- <button
               type="button"
               (click)="resetTimer()"
               class=" hidden md:inline-flex items-center gap-1 rounded-lg px-2.5 py-1 text-xs md:text-sm font-medium text-gray-600 hover:bg-gray-100 ring-1 ring-inset ring-gray-300 transition disabled:opacity-60 disabled:cursor-not-allowed"
               [disabled]="emailExpired">
               <lucide-icon name="refresh-cw" [size]="14"></lucide-icon>
               <span i18n="@@quickEmail.resetTimer">Reset</span>
-            </button>
+            </button> -->
           </div>
 
           <button
