--- a/src/app/pages/facebook-temp-email/facebook-temp-email.html
+++ b/src/app/pages/facebook-temp-email/facebook-temp-email.html
@@ -1,14 +1,14 @@
 <div class="min-h-screen font-sans">
   <section class="bg-white">
     <div class="container mx-auto px-4 pt-6 md:pt-16 pb-12 text-center">
-      <h1 class="mt-4 text-3xl md:text-4xl font-extrabold text-gray-900">
+      <h1 class="text-3xl mb-4 md:text-4xl font-extrabold text-gray-900">
         Temporary Email for Facebook
       </h1>
-      <p class="mt-3 text-sm md:text-base text-gray-700 max-w-2xl mx-auto">
+      <p class="mb-8 text-sm md:text-base text-gray-700 mx-auto">
         Get a temporary email for Facebook so you can verify accounts without exposing your personal inbox.
       </p>
 
-      <div class="mt-8 rounded-2xl bg-white shadow-xl ring-1 ring-gray-200">
+      <div class=" rounded-2xl bg-white shadow-xl ring-1 ring-gray-200">
         <app-main-temp-mail title="facebook verification"></app-main-temp-mail>
       </div>
 
