--- a/src/app/pages/twitter-temp-email/twitter-temp-email.html
+++ b/src/app/pages/twitter-temp-email/twitter-temp-email.html
@@ -167,6 +167,7 @@
       <p class="text-gray-600 mb-5 leading-relaxed">We also provide temporary email services for other social media and platforms. Keep your inbox organized across all your accounts.</p>
       <div class="grid grid-cols-2 sm:grid-cols-3 gap-3">
         <a routerLink="/temporary-email-for-instagram" class="text-gray-900 underline hover:text-gray-700 font-semibold">Instagram</a>
+        <a routerLink="/temporary-email-for-snapchat" class="text-gray-900 underline hover:text-gray-700 font-semibold">Snapchat</a>
         <a routerLink="/temporary-email-for-tiktok" class="text-gray-900 underline hover:text-gray-700 font-semibold">TikTok</a>
         <a routerLink="/temporary-email-for-facebook" class="text-gray-900 underline hover:text-gray-700 font-semibold">Facebook</a>
         <a routerLink="/temporary-email-for-discord" class="text-gray-900 underline hover:text-gray-700 font-semibold">Discord</a>
