--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -14,27 +14,30 @@
       </p>
 
       <div class="mt-8 lg:grid lg:grid-cols-[220px_minmax(0,1fr)_220px] lg:gap-6 lg:items-start">
-        <div class="hidden lg:block sticky top-24">
+        <!-- <div class="hidden lg:block sticky top-24">
           <ins class="adsbygoogle block min-h-[600px]"
                appGoogleAdsense
                data-ad-client="ca-pub-2438434508881500"
                data-ad-format="autorelaxed"
                data-ad-slot="6665878094"
                style="display:block"></ins>
-        </div>
+        </div> -->
+        <div></div>
 
         <div class="rounded-2xl bg-white shadow-xl ring-1 ring-gray-200">
           <app-main-temp-mail></app-main-temp-mail>
         </div>
 
-        <div class="hidden lg:block sticky top-24">
+        <div></div>
+
+        <!-- <div class="hidden lg:block sticky top-24">
           <ins class="adsbygoogle block min-h-[600px]"
                appGoogleAdsense
                data-ad-client="ca-pub-2438434508881500"
                data-ad-format="autorelaxed"
                data-ad-slot="6665878094"
                style="display:block"></ins>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
